--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Exercise 1</h1>
     <p id="E1">function Exercise1()
-        <input type="button" onclick="Exercise1()" value="Display">
+        <input type="button" onclick="Exercise1('Hello World')" value="Display">
     </p>
 </body>
 <script src="exercise.js"></script>
